welcome.lessons.welcome.variables.Variables.scala.error
Variables:6: error: not found: value nbPas
nbPas=nbPas+1();
^